Edited wiki page Tutorial1 through web user interface.

--- a/wiki/Tutorial1.wiki
+++ b/wiki/Tutorial1.wiki
@@ -49,7 +49,7 @@ params <- createParameters(x=10,
   vars=c("tmean", "prec"),        
   weights=c("dtr",1),
   ndivisions=12,                  
-  climate.data="current_a1b_2030",              
+  climate.data="current_and_a1b_2030",              
   ext="asc",
   direction="backwd",             
   growing.season=c(8:12,1:2),           
