--- a/wiki/Tutorial1.wiki
+++ b/wiki/Tutorial1.wiki
@@ -137,8 +137,15 @@ res1_sum_mean_cropped_th5p <- applyThreshold(res1_sum_mean_cropped, best=0.05)
 }}}
 
 == Creating a report ==
+(not 100 % working yet)
 Once we have run one or more models, we can create a report. The report function takes a list of models. Each model consists of params, training data, results, caption of the model and caption of each results). 
 
 {{{
 model1 <- list(params=params, training=training, results=list(res1_sum$mean, res1_sum_mean_cropped_th5p, res1_sum_mean_cropped), m.lab="2030", r.lab=c("mean", "cropped: 5% best", "only cropped"))
 report(list(model1), "report1.pdf")
+}}}
+== Export an ESRI ascii Grid for further use in any GIS ==
+In order to export dissimilarities as a grid, we can make use of the `writeRaster` function of the `raster` package.  
+{{{
+writeRaster(res_sum_mean_cropped_th100, filename="analogues.asc", format="ascii")
+}}}
