Edited wiki page Tutorial2 through web user interface.

--- a/wiki/Tutorial2.wiki
+++ b/wiki/Tutorial2.wiki
@@ -1,3 +1,10 @@
+
+-------
+= *_ CAUTION: this is work in progress and still contains errors _* =
+----------
+
+
+
 = Comparing multiple points =
 == Requirements ==
   * Understood tutorial 1
