--- a/trunk/package/analogues/NEWS
+++ b/trunk/package/analogues/NEWS
@@ -2,3 +2,7 @@
 Version 0.0.5 (Thu Aug  4 11:09:08 EDT 2011)
 --------------------------------------------
 * fixed ext parameter in createParameters(), so the '.' is needs to be supplied by user. 
+
+Version 0.0.7 (Thu Aug  4 11:09:08 EDT 2011)
+* JRV: added a wrapper function to calculate dissimilarities on a point basis.
+* JRV: fixed and updated documentation. No more roxygenize, pls
