Bug fix in dissimilarityPoints.R, and documentation update in report.Rd

--- a/package/analogues/NEWS
+++ b/package/analogues/NEWS
@@ -21,3 +21,8 @@ Version 0.0.10 (Sat Aug  27 13:08:00 EDT 2011)
 --------------------------------------------
 * JRV: Bug fix. There was an error in how the operations were done when across.year=F. Hopefully fixed now.
 * JRV: Bug fix. Report was failing in the conversion of a raster to a SpatialPointsDataFrame. Fixed.
+
+Version 0.0.11 (Sun Aug  28 21:19:00 EDT 2011)
+--------------------------------------------
+* JRV: Bug fix. Small error in generating the roll for point analyses dissimilarityPoints() when the growing season was shorter than 12 months and the params$across.year=F
+* JRV: Error in documentation fixed (report.Rd), m.lab appeared twice, not it was changed by r.lab and m.lab, respectively.
